# worldbook-cli

./: .gitignore  .npmignore  README.md  package.json  pyproject.toml
worldbook_cli/: __init__.py  cli.py
